--- a/app/src/main/res/layout/listview_row.xml
+++ b/app/src/main/res/layout/listview_row.xml
@@ -5,85 +5,83 @@
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:gravity="center_horizontal">
+
     <TableRow
-        android:layout_width="wrap_content"
+        android:layout_width="310dp"
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:orientation="vertical"
+            android:id="@+id/firstColumn"
             android:layout_width="74dp"
             android:layout_height="wrap_content"
-            android:id="@+id/firstColumn"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/FirstText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Username"
-                android:layout_weight="1"
-                android:textColor="#ff000000"
                 android:layout_gravity="center"
-                android:typeface="monospace">
-            </TextView>
+                android:layout_weight="1"
+                android:text="Usuário"
+                android:textColor="#ff000000"
+                android:typeface="monospace"></TextView>
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="vertical"
+            android:id="@+id/secondColumn"
             android:layout_width="74dp"
             android:layout_height="wrap_content"
-            android:id="@+id/secondColumn"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/SecondText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Level"
-                android:layout_weight="2"
-                android:textColor="#ff000000"
                 android:layout_gravity="center"
-                android:typeface="monospace">
-            </TextView>
+                android:layout_weight="2"
+                android:text="Nível"
+                android:textColor="#ff000000"
+                android:typeface="monospace"></TextView>
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="vertical"
+            android:id="@+id/thirdColumn"
             android:layout_width="74dp"
             android:layout_height="wrap_content"
-            android:id="@+id/thirdColumn"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/ThirdText"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Points"
-                android:layout_weight="1"
-                android:textColor="#ff000000"
                 android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="Pontuação"
+                android:textColor="#ff000000"
                 android:typeface="monospace">
 
             </TextView>
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="vertical"
+            android:id="@+id/fourthColumn"
             android:layout_width="74dp"
             android:layout_height="wrap_content"
-            android:id="@+id/fourthColumn"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/FourthText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Wrong"
-                android:layout_weight="1"
-                android:textColor="#ff000000"
                 android:layout_gravity="center"
-                android:typeface="monospace">
-            </TextView>
+                android:layout_weight="1"
+                android:text="Erro"
+                android:textColor="#ff000000"
+                android:typeface="monospace"></TextView>
         </LinearLayout>
 
     </TableRow>
