--- a/app/src/main/res/layout/fragment_userdetails.xml
+++ b/app/src/main/res/layout/fragment_userdetails.xml
@@ -276,7 +276,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Your Elements: "
+            android:text="Seus Elementos: "
             android:id="@+id/txvElements"
             android:layout_gravity="top|center_horizontal"
             android:textAlignment="center"
